ci-operator/infra/openshift/origin/images-ocp-base.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ocp
