ci-operator/infra/openshift/origin/images-ocp-rpms.yaml
apiVersion: v1
kind: List
items:

# each RPM (group,release) pair gets a service and deployment to serve RPM content from the mirrors
- apiVersion: v1
  kind: Service
  metadata:
    name: base-4-0
    namespace: ocp
  spec:
    selector:
      app: base-4-0
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: base-4-0
    namespace: ocp
    labels:
      app: base-4-0
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"content-mirror:latest","namespace":"ci"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mirror\")].image"}]'
  spec:
    selector:
      matchLabels:
        app: base-4-0
    template:
      metadata:
        labels:
          app: base-4-0
      spec:
        volumes:
        - name: repos
          secret:
            secretName: base-4-0-repos
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        containers:
        - name: mirror
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - name: repos
            mountPath: /tmp/repos
            readOnly: true
          - name: cache
            mountPath: /tmp/cache
          image: " "
          workingDir: /tmp/repos
          command:
          - content-mirror
          - --path=/tmp/config
          - --max-size=5g
          - --timeout=30m
          - /tmp/repos
