ci-operator/infra/openshift/origin/artifacts-release-4.2.yaml
# Run an RPM server for release artifacts
#
kind: List
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: artifacts-openshift-origin-release-4-2
    namespace: ci-rpms
  spec:
    host: artifacts-openshift-release-4-2.svc.ci.openshift.org
    to:
      name: artifacts-openshift-origin-release-4-2
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: artifacts-openshift-origin-release-4-2
    namespace: ci-rpms
  spec:
    selector:
      app: artifacts-openshift-origin-release-4-2
    ports:
    - port: 80
      targetPort: 8080
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: artifacts-openshift-origin-release-4-2
    namespace: ci-rpms
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","namespace":"ocp","name":"4.2:artifacts"},"fieldPath":"spec.template.spec.containers[?(@.name==\"srv\")].image"}]'
  spec:
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: artifacts-openshift-origin-release-4-2
    template:
      metadata:
        labels:
          app: artifacts-openshift-origin-release-4-2
      spec:
        containers:
        - name: srv
          image: registry.svc.ci.openshift.org/ocp/4.2:artifacts
          command:
          - /bin/bash
          - -c
          args:
          - |
            [...]
          ports:
          - containerPort: 8080
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
          workingDir: /srv
        restartPolicy: Always
        terminationGracePeriodSeconds: 1
