ci-operator/infra/openshift/origin/artifacts-rpms.yaml
#
# Run a frontend mirror that aggregates all all repos.
#
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: artifacts-rpms-openshift-origin
    namespace: ci-rpms
  spec:
    host: rpms.svc.ci.openshift.org
    to:
      name: artifacts-rpms-openshift-origin
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: artifacts-rpms-openshift-origin
    namespace: ci-rpms
  spec:
    selector:
      app: artifacts-rpms-openshift-origin
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: artifacts-rpms-openshift-origin
    namespace: ci-rpms
    labels:
      app: artifacts-rpms-openshift-origin
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"content-mirror:latest","namespace":"ci"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mirror\")].image"}]'
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: artifacts-rpms-openshift-origin
    template:
      metadata:
        labels:
          app: artifacts-rpms-openshift-origin
      spec:
        volumes:
        - name: sync
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        containers:
        - name: mirror
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
          - name: sync
            mountPath: /tmp/sync
          - name: cache
            mountPath: /tmp/cache
          image: " "
          workingDir: /tmp/sync
          command:
          - content-mirror
          - --path=/tmp/config
          - --max-size=5g
          - --timeout=30m
          - /tmp/sync
        - name: sync-openshift
          volumeMounts:
          - name: sync
            mountPath: /tmp/sync
          image: "centos:7"
          workingDir: /tmp/sync
          command:
          - /bin/bash
          - -c
          - |
            [...]
